kubernetes/helloworldservice.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworldservice
spec:
  template:
    metadata:
      labels:
        app: helloworldservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: helloworldservice
          ports:
          - containerPort: 8080
          readinessProbe:
            periodSeconds: 5
            initialDelaySeconds: 10
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:8080"]
          livenessProbe:
            periodSeconds: 15
            initialDelaySeconds: 20
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:8080"]
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: helloworldservice
spec:
  type: ClusterIP
  selector:
    app: helloworldservice
  ports:
  - name: grpc-web-port
    port: 8080
    targetPort: 8080
