kubernetes/api-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
spec:
  gateways:
  - gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /api/
    route:
    - destination:
        host: api
        port:
          number: 5050
