kubernetes/egress-googleapis.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: whitelist-egress-googleapis
spec:
  hosts:
    - "169.254.169.254" # GCE metadata server
    - "metadata.google" # GCE metadata server
    - "metadata.google.internal" # GCE metadata server
    - "accounts.google.com" # Used to get token
    - "*.googleapis.com"
  ports:
    - number: 80
      protocol: HTTP
      name: http
    - number: 443
      protocol: HTTPS
      name: https
